tests/neg/i22333.check
-- [E007] Type Mismatch Error: tests/neg/i22333.scala:5:33 -------------------------------------------------------------
5 |val _ = Container[(1,2,3)].guard((6, 8): Tuple.Tail[(5, 6, 8)]) // error
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                                 Found:    ((6 : Int), (8 : Int))
  |                                 Required: ((2 : Int), (3 : Int))
  |
  | longer explanation available when compiling with `-explain`
